footer content update and fix responsive issues on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -27,4 +27,7 @@ a.active {
     font-size: 12px !important;
     padding: 8px 16px !important;
   }
+  .bannercontent h1 {
+    font-size: 1.8rem !important;
+  }
 }
